--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <p>syn | syn-ack | ack</p>
     <p>👤 clickity-clacks FQDN into a web browser 🖥️</p>
     <p>🖥️ checks local hosts file 🗂️ not found ❌</p>
-    <p>🖥️ checks local DNS cache 🗂 not found ❌</p>
+    <p>🖥️ checks local DNS cache 🗂️ not found ❌</p>
     <p>🖥️ makes DNS request to DNS resolver 🌐</p>
-    <p>🌐 checks local DNS cache 🗂 not found ❌</p>
+    <p>🌐 checks local DNS cache 🗂️ not found ❌</p>
     <p>🌐 is a lazy non-recursive DNS resolver</p>
     <p>🌐 tells 🖥️ “do your own work, buddy!”</p>
     <p>🖥️ makes DNS request to root DNS server 🌍</p>
@@ -33,7 +33,7 @@
     <p>🖥️ makes DNS request to the authoritative DNS server 🏢</p>
     <p>🏢 replies with IP address 🔢</p>
     <p>🖥️ opens TCP connection (SYN) to 🔢</p>
-    <p>🔢 replies TCP (SYN/ACK) to 🖥</p>
+    <p>🔢 replies TCP (SYN/ACK) to 🖥️</p>
     <p>🖥️ replies TCP (ACK) to 🔢</p>
     <p>THREE-WAY HANDSHAKE completed 🤝</p>
     <p>🖥️ sends HTTP request to 🔢</p>
