--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div>
     <h1>3WHS</h1>
     <p>syn | syn-ack | ack</p>
-    <p>👤 clickity-clacks FQDN into a web browser 🖥️</p>
+    <p>👤 clickity-clacks FQDN into a web browser on a computer 🖥️</p>
     <p>🖥️ checks local hosts file 🗂️ not found ❌</p>
     <p>🖥️ checks local DNS cache 🗂️ not found ❌</p>
     <p>🖥️ makes DNS request to DNS resolver 🌐</p>
